--- a/app.json
+++ b/app.json
@@ -24,7 +24,11 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#FFFFFF"
-      }
+      },
+      "package": "com.gooseguides.sandbox"
+    },
+    "androidNavigationBar": {
+      "backgroundColor": "#000000"
     },
     "web": {
       "favicon": "./assets/favicon.png"
